tests/integration/snapshots/integration__active_pipeline_goldens__native_pipeline_direct_fn_ability_call_delimits_the_handle.snap
---
source: tests/integration/active_pipeline_goldens.rs
expression: "pipeline_contract_summary(ir_text, true)"
---
__tribute_delimit_done_0: (tribute_rt.anyref, core.i32) -> ()
  func.return operands=0 results=0: 1
__tribute_delimit_unhandled_0: (core.array<adt.struct<_Marker>>, tribute_rt.anyref, adt.struct<_closure>, core.i32, core.i32, core.i32, tribute_rt.anyref) -> ()
  func.unreachable operands=0 results=0: 1
__tribute_main: () -> (core.nil)
  func.call operands=0 results=1: 1
  func.call_indirect operands=4 results=0: 1
  func.return operands=1 results=0: 1
main: () -> (core.nil)
  func.call operands=0 results=1: 1
  func.return operands=1 results=0: 1
