tests/integration/snapshots/integration__active_pipeline_goldens__native_pipeline_direct_fn_ability_call_uses_cps_root_contract.snap
---
source: tests/integration/active_pipeline_goldens.rs
expression: "pipeline_contract_summary(ir_text, true)"
---
__tribute_done_k: (tribute_rt.anyref, core.nil) -> ()
  func.return operands=0 results=0: 1
__tribute_main: (core.array<adt.struct<_Marker>>, Frame) -> ()
  func.call operands=2 results=1: 1
  func.tail_call operands=2 results=0: 1
__tribute_unhandled: (core.array<adt.struct<_Marker>>, tribute_rt.anyref, adt.struct<_closure>, core.i32, core.i32, core.i32, tribute_rt.anyref) -> ()
  func.unreachable operands=0 results=0: 1
main: () -> (core.nil)
  func.call operands=0 results=1: 1
  func.call operands=2 results=0: 1
  func.return operands=1 results=0: 1
run: (core.array<adt.struct<_Marker>>, Frame) -> ()
  func.call operands=0 results=1: 1
  func.call operands=2 results=1: 4
  func.call operands=5 results=1: 2
  func.call_indirect operands=5 results=1: 2
  func.tail_call_indirect operands=3 results=0: 1
