tests/integration/snapshots/integration__active_pipeline_goldens__native_pipeline_resumptive_op_continuation.snap
---
source: tests/integration/active_pipeline_goldens.rs
expression: "pipeline_contract_summary(ir_text, true)"
---
__tribute_done_k: (tribute_rt.anyref, core.nil) -> ()
  func.return operands=0 results=0: 1
__tribute_main: (core.array<adt.struct<_Marker>>, Frame) -> ()
  func.tail_call operands=2 results=0: 1
__tribute_unhandled: (core.array<adt.struct<_Marker>>, tribute_rt.anyref, adt.struct<_closure>, core.i32, core.i32, core.i32, tribute_rt.anyref) -> ()
  func.unreachable operands=0 results=0: 1
bump: (core.array<adt.struct<_Marker>>, Frame) -> ()
  func.call operands=2 results=1: 1
  func.tail_call_indirect operands=8 results=0: 1
main: () -> (core.nil)
  func.call operands=0 results=1: 1
  func.call operands=2 results=0: 1
  func.return operands=1 results=0: 1
run_state: (core.array<adt.struct<_Marker>>, Frame) -> ()
  func.call operands=0 results=1: 1
  func.call operands=4 results=1: 1
  func.tail_call operands=2 results=0: 1
