tests/integration/snapshots/integration__active_pipeline_goldens__shared_pipeline_direct_fn_ability_call.snap
---
source: tests/integration/active_pipeline_goldens.rs
expression: "pipeline_contract_summary(&ir_text, false)"
---
main: Some(Direct) () -> (core.nil)
  func.call operands=0 results=1: 1
  func.return operands=1 results=0: 1
run: Some(Direct) () -> (core.i32)
  func.return operands=1 results=0: 1
use_console: Some(EvidenceDirect) (core.array<adt.struct<_Marker>>) -> (core.i32)
  effect.dispatch_tail operands=2 results=1: 2
  func.return operands=1 results=0: 1
