tests/integration/snapshots/integration__active_pipeline_goldens__shared_pipeline_float_comparison_predicates.snap
---
source: tests/integration/active_pipeline_goldens.rs
expression: "pipeline_contract_summary(&ir_text, false)"
---
main: Some(Direct) () -> (core.nil)
  func.return operands=1 results=0: 1
