tests/integration/snapshots/integration__active_pipeline_goldens__shared_pipeline_mixed_nested_handler_boundary.snap
---
source: tests/integration/active_pipeline_goldens.rs
expression: "pipeline_contract_summary(&ir_text, false)"
---
main: Some(Direct) () -> (core.nil)
  func.call operands=0 results=1: 1
  func.return operands=1 results=0: 1
run_all: Some(Direct) () -> (core.i32)
  effect.delimit operands=1 results=1: 1
  func.return operands=1 results=0: 1
run_state_with_console: Some(EvidenceDirect) (core.array<adt.struct<_Marker>>) -> (core.i32)
  effect.delimit operands=2 results=1: 1
  func.return operands=1 results=0: 1
step: Some(Cps) (core.array<adt.struct<_Marker>>, Frame<core.i32>) -> (core.never)
  effect.dispatch_cps operands=4 results=0: 1
  effect.dispatch_tail operands=2 results=1: 1
